multicontainer_project/istio-setup/gateway.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-service
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: client-cluster-ip-service
        port:
          number: 3000
  # - match:
  #   - uri:
  #       prefix: /api
  #   route:
  #   - destination:
  #       host: server-cluster-ip-service.default.svc.cluster.local
  #       port:
  #         number: 5000
